# svit

marketplace_project/: .pre-commit-config.yaml  db.sqlite3  pyproject.toml
marketplace_project/home/: views.py
marketplace_project/home/templates/home/: home.html
marketplace_project/marketplace_project/: settings.py  urls.py
marketplace_project/orders/: admin.py  forms.py  models.py  urls.py  views.py
marketplace_project/orders/migrations/: 0001_initial.py  0002_initial.py
marketplace_project/orders/templates/orders/: cart.html  order_create.html  order_detail.html  order_list.html
marketplace_project/products/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
marketplace_project/products/migrations/: 0001_initial.py  0002_initial.py
marketplace_project/products/templates/products/: product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
marketplace_project/reviews/: admin.py  forms.py  models.py  urls.py  views.py
marketplace_project/reviews/migrations/: 0001_initial.py  0002_initial.py
marketplace_project/reviews/templates/reviews/: _single_review.html  review_form.html  review_item.html  review_list.html  seller_reviews.html
marketplace_project/static/css/: main.css
marketplace_project/templates/: base.html  navbar.html
marketplace_project/users/: admin.py  forms.py  models.py  urls.py  views.py
marketplace_project/users/migrations/: 0001_initial.py  0002_customuser_role.py
marketplace_project/users/templates/users/: login.html  (+3 more)
marketplace_project/users/templatetags/: custom_tags.py
(+1 files in other folders)
