[project]
name = "marketplace"
version = "poetry shell"
description = "poetry shell"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-crispy-forms (>=2.4,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
